--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+
+
+.test {
+  margin-left: 280px;
+}
+
+@media only screen and (max-width: 600px) {
+  .test {
+    margin-left: 0px;
+  }
+}
+
+
+
+
 .App {
   text-align: center;
 }
