--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,9 +1,14 @@
 #About {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    height: 100vh;
+    height: 150vh;
     background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,1) 30%, rgba(250,128,114,1) 98%);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 10%, rgba(250,128,114,1) 110%);
     overflow: hidden;
+}
+
+.description {
+    color: white;
+    font-size: medium;
 }
 
 .AboutText h1{
