--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -11,6 +11,15 @@
     margin-right: auto;
     object-fit: cover;
     width: 75%;
-    height: 23vh;
+    /* height: 23vh; */
     border-radius: 50%;
+}
+
+.icons {
+    position: relative;
+    top: 5%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
