--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,24 +1,59 @@
 #About {
+    padding-bottom: 5%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    height: 150vh;
     background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,1) 10%, rgba(250,128,114,1) 110%);
+    /* background: linear-gradient(0deg, rgba(255,255,255,1) 10%, rgba(250,128,114,1) 90%); */
+    background: linear-gradient(0deg, #f1f1f1 10%, rgba(250,128,114,1) 90%);
     overflow: hidden;
 }
 
+.myInfo {
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    margin: auto;
+    width: 80%;
+    height: 50vh;
+    background-color: #f1f1f1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.myInfo > div {
+    margin: auto;
+    
+    
+}
+
+.vertical-line {
+    display: inline-block;
+    border-left: 1px solid #000;
+    height: max-content;
+}
+
 .description {
+    margin: 3%;
     color: white;
-    font-size: medium;
+    font-size: large;
 }
 
 .AboutText h1{
-    margin-top: 3%;
+    margin-top: 4%;
     position: relative;
     color: white;
 }
 
+@media only screen and (max-width: 950px) {
+    .myInfo {
+        flex-direction: column;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .AboutText h1{
-        margin-top: 20%;
+        margin-top: 22%;
     }
+
+   
 }
