--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -13,24 +13,22 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
     margin: auto;
     width: 80%;
-    height: 50vh;
+   
     background-color: #f1f1f1;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: center;
 }
 
 .myInfo > div {
     margin: auto;
-    
+    width: 33vh;
+    padding-top: 5%;
+    padding-bottom: 5%;
     
 }
 
-.vertical-line {
-    display: inline-block;
-    border-left: 1px solid #000;
-    height: max-content;
-}
 
 .description {
     margin: 3%;
@@ -46,7 +44,7 @@
     text-shadow: black 0px 0px 2px;
 }
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 1200px) {
     .myInfo {
         flex-direction: column;
     }
