--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -51,7 +51,7 @@
     background-color: #ffffff;
     border-radius: 15px;
     text-align: center;
-    
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 
 }
 
