Final Touches to Project Component

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -225,6 +225,10 @@
 
 @media screen and (max-width: 980px) {
 
+
+    h1 {
+        margin-top: 20%;
+    }
     .item {
         padding: 2em 1em 0.8em 1em;
     }
