--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
 }
 
 
+.loadings {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  background: #61dafb;
+}
+
 
 
 .App {
