--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -226,7 +226,7 @@
 @media screen and (max-width: 980px) {
 
 
-    h1 {
+    #Projects h1 {
         margin-top: 20%;
     }
     .item {
@@ -240,6 +240,7 @@
         }
 
 }
+
 
 
 
