--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -16,6 +16,7 @@
 }
 
 .icons {
+    margin-top: 5%;
     position: relative;
     top: 5%;
     display: flex;
@@ -30,4 +31,5 @@ h1 {
 
 .sidebardiv {
     margin: auto;
+    
 }
