--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -51,6 +51,12 @@
     .myInfo {
         flex-direction: column;
     }
+
+    .myInfo > div {
+        width: 100%;
+        padding: 6%;
+        
+    }
 }
 
 @media only screen and (max-width: 600px) {
