--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,4 +1,11 @@
 #Experience {
+    padding-top: 5%;
     overflow: hidden;
-    background: #f1f1f1;
+    background: linear-gradient(180deg, #f1f1f1 0%, #9fb1f9 100%);
+    padding-bottom: 10%;
+}
+
+.accordion {
+    margin: auto;
+    width: 45%;
 }
