--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -7,5 +7,29 @@
 
 .accordion {
     margin: auto;
-    width: 45%;
+    width: 40%;
+}
+
+.descrip {
+    width: 40%;
+    margin: auto;
+}
+
+.experienceMain {
+    padding-top: 8%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 1000px) {
+    .experienceMain {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .accordion {
+        width: 80%;
+    }
 }
