--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,4 +1,5 @@
 #Experience {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-top: 5%;
     overflow: hidden;
     background: linear-gradient(180deg, #f1f1f1 0%, #9fb1f9 100%);
