--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -12,12 +12,23 @@
 }
 
 .descrip {
-    width: 40%;
+    width: 60%;
     margin: auto;
 }
 
+.toggleBar {
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+
 .experienceMain {
-    padding-top: 8%;
+    padding-top: 4%;
     display: flex;
     flex-direction: row;
     justify-content: center;
