--- a/src/Components/Experience/Slideshow.css
+++ b/src/Components/Experience/Slideshow.css
@@ -5,11 +5,15 @@
 
 .test {
     position: relative;
-    width: 110%;
-  
+    width: 100%;
 }
 
 .testDiv {
     position: absolute;
     transform: translate(0, -100%);
+}
+.test2 {
+    position: relative;
+    width: 50%;
+    
 }
