--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -18,6 +18,7 @@
     width: 40%;
 }
 
+
 .descrip {
     margin: 4%;
 }
@@ -35,6 +36,7 @@
 .slideshow {
     margin: auto;
     width: 40%;
+    margin-top: 0;
 }
 
 
