--- a/src/Components/Experience/Slideshow.css
+++ b/src/Components/Experience/Slideshow.css
@@ -7,16 +7,42 @@
     flex-direction: row;
 }
 
-.test {
+.imageDiv {
+    position: absolute;
+    transform: translate(0, -100%);
+}
+
+.image {
+    position: relative;
+    width: 75%;
+}
+
+.image2 {
+    position: relative;
+    width: 42%;
+}
+
+.image3 {
     position: relative;
     width: 100%;
 }
 
-.testDiv {
-    position: absolute;
-    transform: translate(0, -100%);
-}
-.test2 {
+.image4 {
     position: relative;
-    width: 50%;
+    width: 45%;
+}
+
+.image5 {
+    position: relative;
+    width: 42%;
+}
+
+.image6 {
+    position: relative;
+    width: 75%;
+}
+
+.image7 {
+    position: relative;
+    width: 80%;
 }
