--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,6 +1,7 @@
 #About {
     padding-bottom: 5%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
     /* background: rgb(255,255,255); */
     /*background: linear-gradient(0deg, #f1f1f1 0%, #4467f3 80%);*/
     background-color: #f1f1f1;
@@ -15,10 +16,11 @@
     height: 90%;
     left: 280px;
     width: calc(100% - 280px);
-    background-color: #4467f3; 
+    background-color: #4467f3;
     border-bottom-left-radius: 45% 1.5%;
     border-bottom-right-radius: 45% 1.5%;
-    box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.2),
+        0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 .myInfo {
@@ -42,7 +44,6 @@
     padding-bottom: 5%;
 }
 
-
 .description {
     margin: 3%;
     color: white;
@@ -50,7 +51,7 @@
     /* text-shadow: black 0px 0px 2px; */
 }
 
-.AboutText h1{
+.AboutText h1 {
     margin-top: 4%;
     position: relative;
     color: white;
@@ -65,7 +66,6 @@
     .myInfo > div {
         width: 100%;
         padding: 6%;
-        
     }
 
     #About::before {
@@ -74,13 +74,13 @@
 }
 
 @media only screen and (max-width: 600px) {
-    .AboutText h1{
+    .AboutText h1 {
         margin-top: 22%;
     }
 
-   #About::before {
-       left: 0%;
-       width: 100%;
-       height: 200%;
-   }
+    #About::before {
+        left: 0%;
+        width: 100%;
+        height: 200%;
+    }
 }
