--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,5 +1,6 @@
 #Experience {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
     padding-top: 5%;
     overflow: hidden;
     background: linear-gradient(180deg, #f1f1f1 0%, #9fb1f9 100%);
@@ -17,7 +18,6 @@
     margin: auto;
     width: 40%;
 }
-
 
 .descrip {
     margin: 4%;
@@ -38,7 +38,6 @@
     width: 40%;
     margin-top: 0;
 }
-
 
 .experienceMain {
     padding-top: 4%;
