--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,5 +1,6 @@
 #Projects {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
     background: #f1f1f1;
     overflow: hidden;
     padding-bottom: 5%;
@@ -19,14 +20,12 @@
     flex-flow: row wrap;
 }
 
-
 .ProjectItemList > div {
     margin: auto;
     margin-top: 0%;
     width: 33vh;
     padding-top: 5%;
     padding-bottom: 5%;
-    
 }
 
 .projectItem {
@@ -38,7 +37,6 @@
     width: 110%;
 }
 
-
 .polarioImage {
     width: 100%;
 }
@@ -49,115 +47,122 @@
     border-radius: 15px;
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-
 }
 
-    .item header {
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
-        margin: -3em 0 3em -3em;
-        width: calc(100% + 6em);
-        height: 12em;
-        display: -moz-flex;
-        display: -webkit-flex;
-        display: -ms-flex;
-        display: flex;
-        flex-direction: row;
-        -webkit-flex-direction: row;
-        -moz-align-items: center;
-        -webkit-align-items: center;
-        -ms-align-items: center;
-        align-items: center;
-        -moz-justify-content: center;
-        -webkit-justify-content: center;
-        -ms-justify-content: center;
-        justify-content: center;
-        background-color: #444;
-        color: rgba(255, 255, 255, 0.75);
-        position: relative;
-        overflow: hidden;
-    }
+.item header {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    margin: -3em 0 3em -3em;
+    width: calc(100% + 6em);
+    height: 12em;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    background-color: #444;
+    color: rgba(255, 255, 255, 0.75);
+    position: relative;
+    overflow: hidden;
+}
 
-        .item header input, .item header select, .item header textarea {
-            color: #ffffff;
-        }
+.item header input,
+.item header select,
+.item header textarea {
+    color: #ffffff;
+}
 
-        .item header a {
-            color: inherit;
-        }
+.item header a {
+    color: inherit;
+}
 
-            .item header a:hover {
-                color: #EF6480 !important;
-            }
+.item header a:hover {
+    color: #ef6480 !important;
+}
 
-        .item header strong, .item header b {
-            color: #ffffff;
-        }
+.item header strong,
+.item header b {
+    color: #ffffff;
+}
 
-        .item header h1, .item header h2, .item header h3, .item header h4, .item header h5, .item header h6 {
-            color: #ffffff;
-        }
+.item header h1,
+.item header h2,
+.item header h3,
+.item header h4,
+.item header h5,
+.item header h6 {
+    color: #ffffff;
+}
 
-        .item header blockquote {
-            border-left-color: #ffffff;
-        }
+.item header blockquote {
+    border-left-color: #ffffff;
+}
 
-        .item header code {
-            background: rgba(255, 255, 255, 0.075);
-            border-color: #ffffff;
-        }
+.item header code {
+    background: rgba(255, 255, 255, 0.075);
+    border-color: #ffffff;
+}
 
-        .item header hr {
-            border-bottom-color: #ffffff;
-        }
+.item header hr {
+    border-bottom-color: #ffffff;
+}
 
-        .item header a {
-            -moz-transition: -moz-transform 0.2s ease;
-            -webkit-transition: -webkit-transform 0.2s ease;
-            -ms-transition: -ms-transform 0.2s ease;
-            transition: transform 0.2s ease;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: block;
-        }
+.item header a {
+    -moz-transition: -moz-transform 0.2s ease;
+    -webkit-transition: -webkit-transform 0.2s ease;
+    -ms-transition: -ms-transform 0.2s ease;
+    transition: transform 0.2s ease;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 
-            .item header a:before {
-                content: '';
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-color: rgba(0, 0, 0, 0.25);
-                /* background-image: url("images/overlay.png"); */
-            }
+.item header a:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+    /* background-image: url("images/overlay.png"); */
+}
 
-        .item header:hover a {
-            -moz-transform: scale(1.1);
-            -webkit-transform: scale(1.1);
-            -ms-transform: scale(1.1);
-            transform: scale(1.1);
-        }
+.item header:hover a {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
 
-        .item header > * {
-            position: relative;
-            z-index: 1;
-        }
+.item header > * {
+    position: relative;
+    z-index: 1;
+}
 
-        .item header h3 {
-            margin: 0;
-            -moz-pointer-events: none;
-            -webkit-pointer-events: none;
-            -ms-pointer-events: none;
-            pointer-events: none;
-        }
+.item header h3 {
+    margin: 0;
+    -moz-pointer-events: none;
+    -webkit-pointer-events: none;
+    -ms-pointer-events: none;
+    pointer-events: none;
+}
 
 .items {
     display: -moz-flex;
@@ -172,10 +177,10 @@
     margin: -2em 0 0 -2em;
 }
 
-    .items .item {
-        margin: 2em 2em 0em 0em;
-        width: calc(50% - 2em);
-    }
+.items .item {
+    margin: 2em 2em 0em 0em;
+    width: calc(50% - 2em);
+}
 
 /* @media screen and (max-width: 980px) {
 
@@ -223,8 +228,6 @@
 } */
 
 @media screen and (max-width: 980px) {
-
-
     #Projects h1 {
         margin-top: 20%;
     }
@@ -232,20 +235,9 @@
         padding: 2em 1em 0.8em 1em;
     }
 
-        .item header {
-            height: 12em;
-            margin: -2em 0 2em -1em;
-            width: calc(100% + 2em);
-        }
-
+    .item header {
+        height: 12em;
+        margin: -2em 0 2em -1em;
+        width: calc(100% + 2em);
+    }
 }
-
-
-
-
-
-
-
-
-
-	
