--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -4,7 +4,14 @@
     padding-top: 5%;
     overflow: hidden;
     background: linear-gradient(180deg, #f1f1f1 0%, #9fb1f9 100%);
+    /* background-color: #f1f1f1; */
+
+    
+    /* background-color: #4467f3;
+    border-top-left-radius: 45% 1.5%;
+    border-top-right-radius: 45% 1.5%; */
     padding-bottom: 10%;
+    /* padding-top: -10%; */
 }
 
 .accordion {
@@ -16,7 +23,7 @@
 .paperList {
     /* padding-top: 6%; */
     margin: auto;
-    width: 40%;
+    width: 70%;
 }
 
 .descrip {
@@ -35,14 +42,15 @@
 
 .slideshow {
     margin: auto;
-    width: 40%;
-    margin-top: 0;
+    width: 70%;
+    padding-top: 5%;
+    /* margin-top: 0; */
 }
 
 .experienceMain {
     padding-top: 4%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 }
 
